[gd_scene load_steps=25 format=2]

[ext_resource path="res://colworld.gd" type="Script" id=1]
[ext_resource path="res://mazegen.gd" type="Script" id=2]
[ext_resource path="res://getGoalNr.gd" type="Script" id=3]
[ext_resource path="res://scenes/monster.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sharps/TaskFactory.cs" type="Script" id=5]
[ext_resource path="res://BossMap.gd" type="Script" id=6]
[ext_resource path="res://scenes/boss.tscn" type="PackedScene" id=7]
[ext_resource path="res://paths/numpanel.svg" type="Texture" id=8]
[ext_resource path="res://sprites/transparent.png" type="Texture" id=9]
[ext_resource path="res://sprites/obstacle.png" type="Texture" id=10]
[ext_resource path="res://sounds/andra.mp3" type="AudioStream" id=11]
[ext_resource path="res://circle.png" type="Texture" id=12]
[ext_resource path="res://scenes/door.tscn" type="PackedScene" id=13]
[ext_resource path="res://player.tscn" type="PackedScene" id=14]
[ext_resource path="res://actors/enemy_1.tscn" type="PackedScene" id=17]

[sub_resource type="StreamTexture" id=22]
flags = 4
load_path = "res://.import/steam_math_pipeground.png-81ee77ca32054b9e7f271baf38bcd099.stex"

[sub_resource type="Animation" id=21]
resource_name = "BgAnim"
length = 180.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 30, 60, 90, 120, 150, 180 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -823, 0 ), Vector2( 81, 0 ), Vector2( 81, 0 ), Vector2( 81, 712 ), Vector2( 81, 0 ), Vector2( 81, 0 ), Vector2( -823, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 30, 60, 120, 150 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 90.0, 90.0, 0.0, 0.0, 90.0 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0 )

[sub_resource type="TileSet" id=2]
resource_local_to_scene = true
0/name = ""
0/texture = ExtResource( 10 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 0, 0 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 8, 8 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 8, 8 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 8, 8 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "transparent.png 1"
1/texture = ExtResource( 9 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 8, 2.14999 )

[sub_resource type="GDScript" id=17]
script/source = "extends Button


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

"

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 7.49995, 7.5 )

[sub_resource type="CameraTexture" id=18]

[node name="colworld" type="Node2D"]
script = ExtResource( 1 )
number_of_segments = 1

[node name="BgNode2D" type="Node2D" parent="."]
position = Vector2( 200, 0 )
scale = Vector2( 0.5, 0.5 )
z_index = -1

[node name="Cp1" type="Sprite" parent="BgNode2D"]
position = Vector2( 288, 288 )
texture = SubResource( 22 )

[node name="Cp2" type="Sprite" parent="BgNode2D"]
position = Vector2( -736, 288 )
scale = Vector2( -1, 1 )
texture = SubResource( 22 )

[node name="Cp3" type="Sprite" parent="BgNode2D"]
position = Vector2( 288, -736 )
scale = Vector2( 1, -1 )
texture = SubResource( 22 )

[node name="Cp4" type="Sprite" parent="BgNode2D"]
position = Vector2( -736, -736 )
scale = Vector2( -1, -1 )
texture = SubResource( 22 )

[node name="Cp5" type="Sprite" parent="BgNode2D"]
modulate = Color( 1, 1, 1, 0.462745 )
position = Vector2( 288, -1760 )
texture = SubResource( 22 )

[node name="Cp6" type="Sprite" parent="BgNode2D"]
modulate = Color( 1, 1, 1, 0.462745 )
position = Vector2( -736, -1760 )
scale = Vector2( -1, 1 )
texture = SubResource( 22 )

[node name="BgNode2D2" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
position = Vector2( 81, 0 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
z_index = -1

[node name="Cp1" type="Sprite" parent="BgNode2D2"]
position = Vector2( 288, 288 )
texture = SubResource( 22 )

[node name="Cp2" type="Sprite" parent="BgNode2D2"]
position = Vector2( -736, 288 )
rotation = -3.14159
scale = Vector2( 1, -1 )
texture = SubResource( 22 )

[node name="Cp3" type="Sprite" parent="BgNode2D2"]
position = Vector2( 288, -736 )
scale = Vector2( 1, -1 )
texture = SubResource( 22 )

[node name="Cp4" type="Sprite" parent="BgNode2D2"]
position = Vector2( -736, -736 )
rotation = -3.14159
texture = SubResource( 22 )

[node name="Cp5" type="Sprite" parent="BgNode2D2"]
modulate = Color( 1, 1, 1, 0.462745 )
position = Vector2( 288.004, -1760 )
texture = SubResource( 22 )

[node name="Cp6" type="Sprite" parent="BgNode2D2"]
modulate = Color( 1, 1, 1, 0.462745 )
position = Vector2( -736, -1760 )
rotation = -3.14159
scale = Vector2( 1, -1 )
texture = SubResource( 22 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="BgNode2D2"]
autoplay = "BgAnim"
anims/BgAnim = SubResource( 21 )

[node name="Map1" type="TileMap" parent="." groups=["wall"]]
light_mask = 0
position = Vector2( -224.515, 0 )
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
show_collision = true
collision_friction = 0.0
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 65536, 0, 0, 65550, 0, 0, 131072, 0, 0, 131074, 0, 0, 131076, 0, 0, 131078, 0, 0, 131080, 0, 0, 131082, 0, 0, 131084, 0, 0, 131086, 0, 0, 196608, 0, 0, 196622, 0, 0, 262144, 0, 0, 262158, 0, 0, 327680, 0, 0, 327694, 0, 0, 393216, 0, 0, 393230, 0, 0, 458752, 0, 0, 524288, 0, 0, 524302, 0, 0, 589824, 0, 0, 589838, 0, 0, 655360, 0, 0, 655374, 0, 0, 720896, 0, 0, 720910, 0, 0, 786432, 0, 0, 786434, 0, 0, 786436, 0, 0, 786438, 0, 0, 786440, 0, 0, 786442, 0, 0, 786444, 0, 0, 786446, 0, 0, 851968, 0, 0, 851982, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0 )
script = ExtResource( 2 )
debug_draw_routes = true
random_maze = false
start = Vector2( 1, 1 )
goal = Vector2( 14, 7 )
result_max = 10

[node name="pickOps" type="Node2D" parent="Map1"]
modulate = Color( 1, 1, 1, 0.313726 )

[node name="pickNums" type="Node2D" parent="Map1"]

[node name="door" parent="Map1" instance=ExtResource( 13 )]
position = Vector2( 233, 120 )

[node name="oneway" type="KinematicBody2D" parent="Map1"]
position = Vector2( 2, 184 )
rotation = 1.5708

[node name="sprite" type="Sprite" parent="Map1/oneway"]
scale = Vector2( 1, 0.3 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map1/oneway"]
position = Vector2( 0.0629883, -0.149994 )
shape = SubResource( 19 )
one_way_collision = true

[node name="overLay" type="Node2D" parent="Map1"]

[node name="BossMap" type="TileMap" parent="." groups=["wall"]]
light_mask = 0
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
show_collision = true
collision_friction = 0.0
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 65536, 0, 0, 65550, 0, 0, 131072, 0, 0, 131086, 0, 0, 196608, 0, 0, 196622, 0, 0, 262144, 0, 0, 262158, 0, 0, 327680, 0, 0, 327694, 0, 0, 393216, 0, 0, 393230, 0, 0, 458752, 1, 0, 458766, 0, 0, 524288, 0, 0, 524302, 0, 0, 589824, 0, 0, 589838, 0, 0, 655360, 0, 0, 655374, 0, 0, 720896, 0, 0, 720910, 0, 0, 786432, 0, 0, 786446, 0, 0, 851968, 0, 0, 851982, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0 )
script = ExtResource( 6 )

[node name="pickOps" type="Node2D" parent="BossMap"]
modulate = Color( 1, 1, 1, 0.313726 )

[node name="pickNums" type="Node2D" parent="BossMap"]

[node name="oneway" type="KinematicBody2D" parent="BossMap"]
position = Vector2( 2, 120 )
rotation = 1.5708

[node name="sprite" type="Sprite" parent="BossMap/oneway"]
scale = Vector2( 1, 0.3 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossMap/oneway"]
position = Vector2( 0.0629883, -0.149994 )
shape = SubResource( 19 )
one_way_collision = true

[node name="overLay" type="Node2D" parent="BossMap"]

[node name="actors" type="Node2D" parent="."]

[node name="actor3" parent="actors" instance=ExtResource( 17 )]
position = Vector2( -144, 120 )

[node name="doors" type="Node2D" parent="."]

[node name="youwin" type="Label" parent="."]
visible = false
margin_left = 209.0
margin_top = -110.0
margin_right = 324.0
margin_bottom = -20.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Sorry Numio
Your number is
in another Maze
...
"
align = 1
valign = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="player" parent="." groups=["player"] instance=ExtResource( 14 )]
position = Vector2( -88.023, 135.955 )
collision_layer = 18
collision_mask = 3

[node name="Camera2D" type="Camera2D" parent="player"]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="ColorRect" type="ColorRect" parent="player/Camera2D"]
modulate = Color( 0.372549, 0.454902, 0.67451, 1 )
margin_left = -196.0
margin_top = 124.0
margin_right = 64.0
margin_bottom = 146.0

[node name="MainLabel" type="RichTextLabel" parent="player/Camera2D/ColorRect"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.002
anchor_right = 0.002
margin_left = 3.34
margin_top = 4.0
margin_right = 321.34
margin_bottom = 19.0
grow_horizontal = 0
text = "Hello Numbio!"
fit_content_height = true

[node name="ReloadButton" type="Button" parent="player/Camera2D"]
margin_left = 75.023
margin_top = 125.045
margin_right = 130.023
margin_bottom = 145.045
text = "Reload"
script = SubResource( 17 )

[node name="ResetSegmentButton" type="Button" parent="player/Camera2D"]
margin_left = 139.023
margin_top = 125.045
margin_right = 194.023
margin_bottom = 145.045
text = "Reset"
script = SubResource( 17 )

[node name="Numpanel" type="Sprite" parent="player/Camera2D"]
position = Vector2( -167.977, -114.955 )
texture = ExtResource( 8 )

[node name="TargetLabel" type="Label" parent="player/Camera2D/Numpanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.0
margin_top = -31.0
margin_right = -1.0
margin_bottom = -1.0
text = "000"
align = 1
valign = 1
script = ExtResource( 3 )
number_of_doors = 1

[node name="Label" type="Label" parent="player"]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = -12.0
margin_top = -6.0
margin_right = 12.0
margin_bottom = 8.0
text = "0"
align = 1

[node name="PlayerArea" type="Area2D" parent="player"]

[node name="PlayerCollShape" type="CollisionShape2D" parent="player/PlayerArea"]
position = Vector2( -0.477049, -0.455002 )
shape = SubResource( 16 )

[node name="Light2D" type="Light2D" parent="."]
modulate = Color( 0.152941, 0.788235, 0.729412, 1 )
light_mask = 7
texture = SubResource( 18 )
color = Color( 0.164706, 0.521569, 0.152941, 1 )
energy = 13.23

[node name="TaskFactory" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 12 )

[node name="MonsterArea2D" parent="." instance=ExtResource( 4 )]
position = Vector2( 161, 184 )

[node name="BossGlobalTransform" type="Node2D" parent="."]
position = Vector2( 122, 120 )

[node name="boss" parent="BossGlobalTransform" instance=ExtResource( 7 )]

[connection signal="pressed" from="player/Camera2D/ReloadButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="player/Camera2D/ResetSegmentButton" to="." method="_on_ResetSegment_pressed"]
[connection signal="body_entered" from="player/PlayerArea" to="player" method="_on_PlayerArea_body_entered"]
[connection signal="body_entered" from="BossGlobalTransform/boss" to="." method="_on_boss_body_entered"]
